Banner Section Design

--- a/index.html
+++ b/index.html
@@ -46,8 +46,90 @@
     </script>
   </head>
   <body class="font-manrope">
-    <header class="md:container mx-auto"></header>
-    <main class="md:container mx-auto"></main>
-    <footer></footer>
+    <section class="bg-gradient-to-t from-slate-100 to-slate-50">
+      <header class="md:container mx-auto">
+        <!-- Navbar Section Starts From Here -->
+        <nav class="m-3">
+          <div class="navbar">
+            <div class="navbar-start">
+              <a class="text-3xl font-bold">
+                <i
+                  class="fa-solid fa-arrow-right bg-color-primary rounded-full py-1.5 px-2 mr-1 -rotate-45"
+                ></i>
+                Rinterio</a
+              >
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1">
+                <li class="font-bold"><a>Home </a></li>
+                <li><a>Services</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>Blogs</a></li>
+                <li><a>Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="navbar-end gap-4 hidden lg:flex">
+              <button
+                class="bg-white py-2 px-3 border border-gray-200 rounded-full"
+              >
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+              <button
+                class="bg-white py-2 px-3 border border-gray-200 rounded-full"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+              </button>
+              <button
+                class="bg-color-primary font-extrabold py-2 px-4 rounded-full text-lg"
+              >
+                <a href=""
+                  >Book Consult
+                  <i
+                    class="fa-solid fa-arrow-right text-white bg-black mx-2 rounded-full py-2.5 px-2.5 -rotate-45"
+                  ></i
+                ></a>
+              </button>
+            </div>
+            <div class="lg:hidden navbar-end">
+              <i
+                class="fa-solid fa-bars py-2 px-3 rounded-full text-xl bg-white border border-gray-200"
+              ></i>
+            </div>
+          </div>
+        </nav>
+        <!-- Nabvar Section Ends Here -->
+
+        <!-- Banneer Section Starts From Here -->
+        <div class="my-8 lg:my-0 items-center">
+          <div class="mx-4 flex justify-center">
+            <img src="./assets/banner.png" alt="" />
+          </div>
+          <div class="text-center justify-center">
+            <div class="mx-3 grid justify-items-center">
+              <h1
+                class="b text-4xl lg:text-6xl font-extrabold my-6 lg:w-[999px] text-center"
+              >
+                A barn house of this design has a striking appearance
+              </h1>
+              <p class="mb-8 lg:w-[992px]">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents, and large windows that flood the space with natural
+                light.
+              </p>
+            </div>
+            <button
+              class="lg:mb-28 mb-6 px-28 py-2 lg:px-4 lg:py-2 bg-color-primary bg-opacity-40 border border-color-primary font-bold text-lg rounded-full"
+            >
+              View Details
+              <i
+                class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 rounded-full"
+              ></i>
+            </button>
+          </div>
+        </div>
+        <!-- Banner Section Ends Here -->
+      </header>
+    </section>
   </body>
 </html>
