About us section design

--- a/index.html
+++ b/index.html
@@ -130,6 +130,73 @@
         </div>
         <!-- Banner Section Ends Here -->
       </header>
+      <main>
+        <!-- About Section Starts From Here -->
+        <section class="bg-slate-200 px-3 pb-10">
+          <div class="ml-6 mb-4 pt-8 hidden lg:block">
+            <img src="./assets/Vector.png" alt="" />
+          </div>
+          <div class="container mx-auto lg:flex">
+            <!-- Text Container -->
+            <div>
+              <div class="flex justify-center lg:block pt-10 lg:pt-0">
+                <button class="bg-white font-bold rounded-full px-3 py-2">
+                  <i class="fa-solid fa-arrow-right mr-2"></i>About Us
+                </button>
+              </div>
+              <div class="text-center lg:text-start">
+                <h1 class="text-4xl lg:text-5xl font-black my-5">
+                  We design thoughtful, liveable spaces
+                </h1>
+                <p class="lg:w-11/12 mt-6">
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication, featuring weathered wood, sleek metal
+                  accents.
+                </p>
+              </div>
+              <!-- Cards -->
+              <div class="mt-11">
+                <!-- Card-1 -->
+                <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
+                  <div class="lg:flex lg:items-center">
+                    <img src="./assets/commercial.png" alt="" />
+                  </div>
+                  <div class="ml-5 space-y-2">
+                    <h3 class="text-xl font-bold">Commercial</h3>
+                    <p class="lg:w-3/5 text-gray-500">
+                      The barn house captivates with its blend of rustic charm
+                      and modern.
+                    </p>
+                  </div>
+                </div>
+
+                <!-- Card-2 -->
+                <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
+                  <div class="lg:flex lg:items-center">
+                    <img src="./assets/residential.png" alt="" />
+                  </div>
+                  <div class="ml-5 space-y-2">
+                    <h3 class="text-xl font-bold">Residential</h3>
+                    <p class="lg:w-3/5 text-gray-500">
+                      The barn house captivates with its blend of rustic charm
+                      and modern.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Image Container -->
+            <figure class="p-1 mt-5 lg:mt-0">
+              <img
+                class="h-auto lg:max-w-xl"
+                src="./assets/Rectangle.png"
+                class="shadow-2xl"
+              />
+            </figure>
+          </div>
+        </section>
+        <!-- About Section Ends Here -->
+      </main>
     </section>
   </body>
 </html>
