Portfolio section design

--- a/index.html
+++ b/index.html
@@ -196,6 +196,100 @@
           </div>
         </section>
         <!-- About Section Ends Here -->
+
+        <!-- Our Latest Portfolio Section Starts Frme Here -->
+        <section class="lg:py-24 py-10 mx-5">
+          <div class="container mx-auto">
+            <div class="grid justify-items-center">
+              <button
+                class="py-2 px-4 bg-color-primary bg-opacity-25 rounded-full font-bold"
+              >
+                <i class="fa-solid fa-arrow-right"></i
+                ><span class="ml-1">Explore our Latest works</span>
+              </button>
+              <div class="grid justify-items-center">
+                <h1 class="lg:text-5xl text-4xl font-black my-5">
+                  Our Latest Portfolio
+                </h1>
+                <p class="lg:w-[680px] text-center">
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication, featuring weathered wood, sleek metal
+                  accents.
+                </p>
+              </div>
+            </div>
+            <!-- First -->
+            <div class="mt-8 lg:flex">
+              <!-- Portfolio Card -->
+              <div
+                class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mr-6"
+              >
+                <div class="lg:w-7/12 w-full">
+                  <img class="w-full" src="./assets/img1.png" alt="" />
+                </div>
+                <div class="space-y-4 mt-4 lg:mt-0">
+                  <h5 class="font-extrabold text-2xl">Commercial</h5>
+                  <p class="text-gray-500">
+                    The barn house captivates with its blend of rustic charm and
+                    modern. The barn house captivates with its blend of rustic
+                    charm and modern .
+                  </p>
+                  <button class="font-bold text-xl">
+                    View Details
+                    <i
+                      class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+              <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
+                <img class="max-w-6xl" src="./assets/img2.png" alt="" />
+              </div>
+            </div>
+            <!-- Second -->
+            <div class="lg:flex lg:mt-6">
+              <div class="border-2 rounded-xl p-6 my-5 lg:my-0 lg:mt-0">
+                <img
+                  class="lg:max-w-xl w-full"
+                  src="./assets/img3.png"
+                  alt=""
+                />
+              </div>
+              <div
+                class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mx-6"
+              >
+                <div>
+                  <img
+                    class="lg:max-w-xl w-full"
+                    src="./assets/img4.png"
+                    alt=""
+                  />
+                </div>
+                <div class="space-y-4 mt-4 lg:mt-0">
+                  <h5 class="font-extrabold text-2xl">Commercial</h5>
+                  <p class="text-gray-500">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                  <button class="font-bold text-xl">
+                    View Details
+                    <i
+                      class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+              <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
+                <img
+                  class="lg:max-w-xl w-full"
+                  src="./assets/img5.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Our Latest Portfolio Section Ends Here-->
       </main>
     </section>
   </body>
