Let's discuss section design

--- a/index.html
+++ b/index.html
@@ -290,6 +290,67 @@
           </div>
         </section>
         <!-- Our Latest Portfolio Section Ends Here-->
+
+        <!-- Discuss Section Starts From Here -->
+        <section>
+          <div class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
+            <div class="grid justify-items-center py-8 lg:py-20">
+              <button
+                class="py-2 px-4 bg-opacity-50 bg-color-primary rounded-full"
+              >
+                <i class="fa-solid fa-arrow-right"></i
+                ><span class="ml-2">Let’s Connect</span>
+              </button>
+              <div class="grid justify-items-center">
+                <h1
+                  class="lg:text-5xl text-4xl font-extrabold my-4 text-center"
+                >
+                  Let’s Discuss Next Project
+                </h1>
+                <p class="lg:w-[680px] text-center w-96 lg:mx-0">
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication, featuring weathered wood, sleek metal
+                  accents.
+                </p>
+                <div class="grid lg:grid-cols-2 grid-cols-1 gap-5 my-6">
+                  <input
+                    class="p-4 rounded-full lg:w-[400px] w-96"
+                    type="text"
+                    placeholder="First Name*"
+                  />
+                  <input
+                    class="p-4 rounded-full lg:w-[400px] w-96"
+                    type="text"
+                    placeholder="Last Name*"
+                  />
+                  <input
+                    class="p-4 rounded-full lg:w-[400px] w-96"
+                    type="number"
+                    placeholder="Phone Number*"
+                  />
+                  <input
+                    class="p-4 rounded-full lg:w-[400px] w-96"
+                    type="email"
+                    placeholder="Email Number*"
+                  />
+                </div>
+                <textarea
+                  class="h-56 lg:w-[820px] w-96 rounded-3xl p-5"
+                  placeholder="Write your message here"
+                ></textarea>
+                <button
+                  class="py-2 px-3 lg:w-[820px] w-96 bg-color-primary rounded-full mt-7"
+                >
+                  <span class="font-bold">Send Mail</span>
+                  <i
+                    class="fa-solid fa-arrow-right -rotate-45 bg-black text-white py-2 px-2 ml-1 rounded-full"
+                  ></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Discuss Section Ends Here -->
       </main>
     </section>
   </body>
