some issue fixed commit

--- a/index.html
+++ b/index.html
@@ -130,228 +130,218 @@
         </div>
         <!-- Banner Section Ends Here -->
       </header>
-      <main>
-        <!-- About Section Starts From Here -->
-        <section class="bg-slate-200 px-3 pb-10">
-          <div class="ml-6 mb-4 pt-8 hidden lg:block">
-            <img src="./assets/Vector.png" alt="" />
-          </div>
-          <div class="container mx-auto lg:flex">
-            <!-- Text Container -->
-            <div>
-              <div class="flex justify-center lg:block pt-10 lg:pt-0">
-                <button class="bg-white font-bold rounded-full px-3 py-2">
-                  <i class="fa-solid fa-arrow-right mr-2"></i>About Us
-                </button>
-              </div>
-              <div class="text-center lg:text-start">
-                <h1 class="text-4xl lg:text-5xl font-black my-5">
-                  We design thoughtful, liveable spaces
-                </h1>
-                <p class="lg:w-11/12 mt-6">
-                  The barn house captivates with its blend of rustic charm and
-                  modern sophistication, featuring weathered wood, sleek metal
-                  accents.
-                </p>
-              </div>
-              <!-- Cards -->
-              <div class="mt-11">
-                <!-- Card-1 -->
-                <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
-                  <div class="lg:flex lg:items-center">
-                    <img src="./assets/commercial.png" alt="" />
-                  </div>
-                  <div class="ml-5 space-y-2">
-                    <h3 class="text-xl font-bold">Commercial</h3>
-                    <p class="lg:w-3/5 text-gray-500">
-                      The barn house captivates with its blend of rustic charm
-                      and modern.
-                    </p>
-                  </div>
-                </div>
-
-                <!-- Card-2 -->
-                <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
-                  <div class="lg:flex lg:items-center">
-                    <img src="./assets/residential.png" alt="" />
-                  </div>
-                  <div class="ml-5 space-y-2">
-                    <h3 class="text-xl font-bold">Residential</h3>
-                    <p class="lg:w-3/5 text-gray-500">
-                      The barn house captivates with its blend of rustic charm
-                      and modern.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Image Container -->
-            <figure class="p-1 mt-5 lg:mt-0">
-              <img
-                class="h-auto lg:max-w-xl"
-                src="./assets/Rectangle.png"
-                class="shadow-2xl"
-              />
-            </figure>
-          </div>
-        </section>
-        <!-- About Section Ends Here -->
-
-        <!-- Our Latest Portfolio Section Starts Frme Here -->
-        <section class="lg:py-24 py-10 mx-5">
-          <div class="container mx-auto">
-            <div class="grid justify-items-center">
-              <button
-                class="py-2 px-4 bg-color-primary bg-opacity-25 rounded-full font-bold"
-              >
-                <i class="fa-solid fa-arrow-right"></i
-                ><span class="ml-1">Explore our Latest works</span>
+    </section>
+    <main>
+      <!-- About Section Starts From Here -->
+      <section class="bg-slate-200 px-3 pb-10">
+        <div class="ml-6 mb-4 pt-8 hidden lg:block">
+          <img src="./assets/Vector.png" alt="" />
+        </div>
+        <div class="container mx-auto lg:flex">
+          <!-- Text Container -->
+          <div>
+            <div class="flex justify-center lg:block pt-10 lg:pt-0">
+              <button class="bg-white font-bold rounded-full px-3 py-2">
+                <i class="fa-solid fa-arrow-right mr-2"></i>About Us
               </button>
-              <div class="grid justify-items-center">
-                <h1 class="lg:text-5xl text-4xl font-black my-5">
-                  Our Latest Portfolio
-                </h1>
-                <p class="lg:w-[680px] text-center">
-                  The barn house captivates with its blend of rustic charm and
-                  modern sophistication, featuring weathered wood, sleek metal
-                  accents.
-                </p>
-              </div>
             </div>
-            <!-- First -->
-            <div class="mt-8 lg:flex">
-              <!-- Portfolio Card -->
-              <div
-                class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mr-6"
-              >
-                <div class="lg:w-7/12 w-full">
-                  <img class="w-full" src="./assets/img1.png" alt="" />
-                </div>
-                <div class="space-y-4 mt-4 lg:mt-0">
-                  <h5 class="font-extrabold text-2xl">Commercial</h5>
-                  <p class="text-gray-500">
-                    The barn house captivates with its blend of rustic charm and
-                    modern. The barn house captivates with its blend of rustic
-                    charm and modern .
-                  </p>
-                  <button class="font-bold text-xl">
-                    View Details
-                    <i
-                      class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
-                    ></i>
-                  </button>
-                </div>
-              </div>
-              <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
-                <img class="max-w-6xl" src="./assets/img2.png" alt="" />
-              </div>
+            <div class="text-center lg:text-start">
+              <h1 class="text-4xl lg:text-5xl font-black my-5">
+                We design thoughtful, liveable spaces
+              </h1>
+              <p class="lg:w-11/12 mt-6">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
             </div>
-            <!-- Second -->
-            <div class="lg:flex lg:mt-6">
-              <div class="border-2 rounded-xl p-6 my-5 lg:my-0 lg:mt-0">
-                <img
-                  class="lg:max-w-xl w-full"
-                  src="./assets/img3.png"
-                  alt=""
-                />
-              </div>
-              <div
-                class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mx-6"
-              >
-                <div>
-                  <img
-                    class="lg:max-w-xl w-full"
-                    src="./assets/img4.png"
-                    alt=""
-                  />
+            <!-- Cards -->
+            <div class="mt-11">
+              <!-- Card-1 -->
+              <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
+                <div class="lg:flex lg:items-center">
+                  <img src="./assets/commercial.png" alt="" />
                 </div>
-                <div class="space-y-4 mt-4 lg:mt-0">
-                  <h5 class="font-extrabold text-2xl">Commercial</h5>
-                  <p class="text-gray-500">
+                <div class="ml-5 space-y-2">
+                  <h3 class="text-xl font-bold">Commercial</h3>
+                  <p class="lg:w-3/5 text-gray-500">
                     The barn house captivates with its blend of rustic charm and
                     modern.
                   </p>
-                  <button class="font-bold text-xl">
-                    View Details
-                    <i
-                      class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
-                    ></i>
-                  </button>
                 </div>
               </div>
-              <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
-                <img
-                  class="lg:max-w-xl w-full"
-                  src="./assets/img5.png"
-                  alt=""
-                />
+
+              <!-- Card-2 -->
+              <div class="flex bg-white p-6 rounded-xl lg:w-11/12 mt-7">
+                <div class="lg:flex lg:items-center">
+                  <img src="./assets/residential.png" alt="" />
+                </div>
+                <div class="ml-5 space-y-2">
+                  <h3 class="text-xl font-bold">Residential</h3>
+                  <p class="lg:w-3/5 text-gray-500">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </section>
-        <!-- Our Latest Portfolio Section Ends Here-->
+          <!-- Image Container -->
+          <figure class="p-1 mt-5 lg:mt-0">
+            <img
+              class="h-auto lg:max-w-xl"
+              src="./assets/Rectangle.png"
+              class="shadow-2xl"
+            />
+          </figure>
+        </div>
+      </section>
+      <!-- About Section Ends Here -->
 
-        <!-- Discuss Section Starts From Here -->
-        <section>
-          <div class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
-            <div class="grid justify-items-center py-8 lg:py-20">
-              <button
-                class="py-2 px-4 bg-opacity-50 bg-color-primary rounded-full"
-              >
-                <i class="fa-solid fa-arrow-right"></i
-                ><span class="ml-2">Let’s Connect</span>
-              </button>
-              <div class="grid justify-items-center">
-                <h1
-                  class="lg:text-5xl text-4xl font-extrabold my-4 text-center"
-                >
-                  Let’s Discuss Next Project
-                </h1>
-                <p class="lg:w-[680px] text-center w-96 lg:mx-0">
+      <!-- Our Latest Portfolio Section Starts Frme Here -->
+      <section class="lg:py-24 py-10 mx-5">
+        <div class="container mx-auto">
+          <div class="grid justify-items-center">
+            <button
+              class="py-2 px-4 bg-color-primary bg-opacity-25 rounded-full font-bold"
+            >
+              <i class="fa-solid fa-arrow-right"></i
+              ><span class="ml-1">Explore our Latest works</span>
+            </button>
+            <div class="grid justify-items-center">
+              <h1 class="lg:text-5xl text-4xl font-black my-5">
+                Our Latest Portfolio
+              </h1>
+              <p class="lg:w-[680px] text-center">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+            </div>
+          </div>
+          <!-- First -->
+          <div class="mt-8 lg:flex">
+            <!-- Portfolio Card -->
+            <div
+              class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mr-6"
+            >
+              <div class="lg:w-7/12 w-full">
+                <img class="w-full" src="./assets/img1.png" alt="" />
+              </div>
+              <div class="space-y-4 mt-4 lg:mt-0">
+                <h5 class="font-extrabold text-2xl">Commercial</h5>
+                <p class="text-gray-500">
                   The barn house captivates with its blend of rustic charm and
-                  modern sophistication, featuring weathered wood, sleek metal
-                  accents.
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
                 </p>
-                <div class="grid lg:grid-cols-2 grid-cols-1 gap-5 my-6">
-                  <input
-                    class="p-4 rounded-full lg:w-[400px] w-96"
-                    type="text"
-                    placeholder="First Name*"
-                  />
-                  <input
-                    class="p-4 rounded-full lg:w-[400px] w-96"
-                    type="text"
-                    placeholder="Last Name*"
-                  />
-                  <input
-                    class="p-4 rounded-full lg:w-[400px] w-96"
-                    type="number"
-                    placeholder="Phone Number*"
-                  />
-                  <input
-                    class="p-4 rounded-full lg:w-[400px] w-96"
-                    type="email"
-                    placeholder="Email Number*"
-                  />
-                </div>
-                <textarea
-                  class="h-56 lg:w-[820px] w-96 rounded-3xl p-5"
-                  placeholder="Write your message here"
-                ></textarea>
-                <button
-                  class="py-2 px-3 lg:w-[820px] w-96 bg-color-primary rounded-full mt-7"
-                >
-                  <span class="font-bold">Send Mail</span>
+                <button class="font-bold text-xl">
+                  View Details
                   <i
-                    class="fa-solid fa-arrow-right -rotate-45 bg-black text-white py-2 px-2 ml-1 rounded-full"
+                    class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
                   ></i>
                 </button>
               </div>
             </div>
+            <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
+              <img class="max-w-6xl" src="./assets/img2.png" alt="" />
+            </div>
           </div>
-        </section>
-        <!-- Discuss Section Ends Here -->
-      </main>
-    </section>
+          <!-- Second -->
+          <div class="lg:flex lg:mt-6">
+            <div class="border-2 rounded-xl p-6 my-5 lg:my-0 lg:mt-0">
+              <img class="lg:max-w-xl w-full" src="./assets/img3.png" alt="" />
+            </div>
+            <div
+              class="p-6 lg:flex items-center lg:space-x-6 border-2 rounded-xl lg:mx-6"
+            >
+              <div>
+                <img
+                  class="lg:max-w-xl w-full"
+                  src="./assets/img4.png"
+                  alt=""
+                />
+              </div>
+              <div class="space-y-4 mt-4 lg:mt-0">
+                <h5 class="font-extrabold text-2xl">Commercial</h5>
+                <p class="text-gray-500">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <button class="font-bold text-xl">
+                  View Details
+                  <i
+                    class="fa-solid fa-arrow-right -rotate-45 bg-color-primary py-2 px-2 ml-1 rounded-full"
+                  ></i>
+                </button>
+              </div>
+            </div>
+            <div class="border-2 rounded-xl p-6 mt-5 lg:mt-0">
+              <img class="lg:max-w-xl w-full" src="./assets/img5.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our Latest Portfolio Section Ends Here-->
+
+      <!-- Discuss Section Starts From Here -->
+      <section>
+        <div class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
+          <div class="grid justify-items-center py-8 lg:py-20">
+            <button
+              class="py-2 px-4 bg-opacity-50 bg-color-primary rounded-full"
+            >
+              <i class="fa-solid fa-arrow-right"></i
+              ><span class="ml-2 font-bold">Let’s Connect</span>
+            </button>
+            <div class="grid justify-items-center">
+              <h1 class="lg:text-5xl text-4xl font-extrabold my-4 text-center">
+                Let’s Discuss Next Project
+              </h1>
+              <p class="lg:w-[680px] text-center w-96 lg:mx-0">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+              <div class="grid lg:grid-cols-2 grid-cols-1 gap-5 my-6">
+                <input
+                  class="p-4 rounded-full lg:w-[400px] w-96"
+                  type="text"
+                  placeholder="First Name*"
+                />
+                <input
+                  class="p-4 rounded-full lg:w-[400px] w-96"
+                  type="text"
+                  placeholder="Last Name*"
+                />
+                <input
+                  class="p-4 rounded-full lg:w-[400px] w-96"
+                  type="number"
+                  placeholder="Phone Number*"
+                />
+                <input
+                  class="p-4 rounded-full lg:w-[400px] w-96"
+                  type="email"
+                  placeholder="Email Number*"
+                />
+              </div>
+              <textarea
+                class="h-56 lg:w-[820px] w-96 rounded-3xl p-5"
+                placeholder="Write your message here"
+              ></textarea>
+              <button
+                class="py-2 px-3 lg:w-[820px] w-96 bg-color-primary rounded-full mt-7"
+              >
+                <span class="font-bold">Send Mail</span>
+                <i
+                  class="fa-solid fa-arrow-right -rotate-45 bg-black text-white py-2 px-2 ml-1 rounded-full"
+                ></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Discuss Section Ends Here -->
+    </main>
   </body>
 </html>
