works procces and footer section design

--- a/index.html
+++ b/index.html
@@ -198,6 +198,70 @@
       </section>
       <!-- About Section Ends Here -->
 
+      <!-- Works Procces Section Starts From Here -->
+      <section>
+        <div class="bg-slate-200">
+          <div class="container mx-auto">
+            <div class="grid justify-items-center mx-4">
+              <button
+                class="py-2 px-3 rounded-full bg-white font-bold lg:mt-32"
+              >
+                <i class="fa-solid fa-arrow-right"></i>
+                <span class="ml-2">How we works</span>
+              </button>
+              <h1 class="text-3xl lg:text-6xl font-extrabold mt-4">
+                Our Works Process
+              </h1>
+              <p class="mt-5 mb-7 text-center">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+            </div>
+            <!-- Cards Container -->
+            <div class="grid grid-cols-1 lg:grid-cols-4 lg:gap-8 mx-4 pb-20">
+              <!-- Card - 1 -->
+              <div class="p-6 bg-[#E7C1D3] rounded-xl mb-5 lg:mb-0">
+                <img src="./assets/concept.png" alt="" />
+                <h5 class="font-bold text-xl my-2">Concept</h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+              <!-- Card - 2 -->
+              <div class="p-6 bg-[#EFDA6E] rounded-xl">
+                <img src="./assets/flow-chart.png" alt="" />
+                <h5 class="font-bold text-xl my-2">Design Process</h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+              <!-- Card - 3 -->
+              <div class="p-6 bg-[#A4DAC3] rounded-xl my-5 lg:my-0">
+                <img src="./assets/vision.png" alt="" />
+                <h5 class="font-bold text-xl my-2">Supervision</h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+              <!-- Card - 4 -->
+              <div class="p-6 bg-[#77AAEA] rounded-xl">
+                <img src="./assets/budget-planning.png" alt="" />
+                <h5 class="font-bold text-xl my-2">Budget Planning</h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Works Procces Section Ends Here -->
+
       <!-- Our Latest Portfolio Section Starts Frme Here -->
       <section class="lg:py-24 py-10 mx-5">
         <div class="container mx-auto">
@@ -343,5 +407,38 @@
       </section>
       <!-- Discuss Section Ends Here -->
     </main>
+    <!-- Footer Section Starts From Here -->
+    <footer class="bg-black w-full lg:mb-2">
+      <div class="pt-10 grid justify-items-center">
+        <h2 class="text-center text-white text-4xl font-extrabold">
+          <i
+            class="fa-solid fa-arrow-right bg-color-primary -rotate-45 rounded-full text-black py-1 px-2 text-3xl mr-2"
+          ></i
+          >Rinterio
+        </h2>
+        <p class="text-center text-gray-500 lg:w-[680px] mt-6 px-3">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+      </div>
+      <nav
+        class="lg:flex justify-center list-none text-center mt-8 text-[#E9E9E9]"
+      >
+        <li class="mb-3 lg:mx-12"><a href=""></a>Home</li>
+        <li class="mb-3 lg:mx-12"><a href=""></a>Services</li>
+        <li class="mb-3 lg:mx-12"><a href=""></a>Portfolio</li>
+        <li class="mb-3 lg:mx-12"><a href=""></a>Blogs</li>
+        <li class="mb-3 lg:mx-12"><a href=""></a>Contact Us</li>
+      </nav>
+      <div class="grid justify-items-center py-6">
+        <button class="bg-color-primary py-2 px-3 rounded-full w-96 lg:w-48">
+          <span class="font-bold">Book Consult</span
+          ><i
+            class="fa-solid fa-arrow-right bg-black text-white p-2 ml-2 rounded-full -rotate-45"
+          ></i>
+        </button>
+      </div>
+    </footer>
+    <!-- Footer Section Ends Here -->
   </body>
 </html>
