my own design commit

--- a/index.html
+++ b/index.html
@@ -348,6 +348,37 @@
       </section>
       <!-- Our Latest Portfolio Section Ends Here-->
 
+      <!-- Challenge Part Design -->
+      <section class="bg-slate-200 clear-start mb-5">
+        <div class="grid justify-items-center pt-5">
+          <h1 class="lg:text-5xl text-4xl font-extrabold my-5">
+            Our Latest Designs!
+          </h1>
+          <p class="text-gray-500">Our latest designs Are Bellow.</p>
+        </div>
+        <div class="grid justify-items-center container mx-auto">
+          <div class="carousel w-3/4 rounded-2xl my-5">
+            <div id="item1" class="carousel-item w-full">
+              <img src="./assets/onem.jpg" class="w-full" />
+            </div>
+            <div id="item2" class="carousel-item w-full">
+              <img src="./assets/towm.jpg" class="w-full" />
+            </div>
+            <div id="item3" class="carousel-item w-full">
+              <img src="./assets/threem.jpg" class="w-full" />
+            </div>
+            <div id="item4" class="carousel-item w-full">
+              <img src="./assets/one.jpg" class="w-full" />
+            </div>
+          </div>
+          <div class="flex w-full justify-center gap-2 py-2">
+            <a href="#item1" class="btn btn-xs">1</a>
+            <a href="#item2" class="btn btn-xs">2</a>
+            <a href="#item3" class="btn btn-xs">3</a>
+            <a href="#item4" class="btn btn-xs">4</a>
+          </div>
+        </div>
+      </section>
       <!-- Discuss Section Starts From Here -->
       <section>
         <div class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
