--- a/index.html
+++ b/index.html
@@ -352,9 +352,12 @@
       <section class="bg-slate-200 clear-start mb-5">
         <div class="grid justify-items-center pt-5">
           <h1 class="lg:text-5xl text-4xl font-extrabold my-5">
-            Our Latest Designs!
+            Our Next Projects!
           </h1>
-          <p class="text-gray-500">Our latest designs Are Bellow.</p>
+          <p class="text-gray-500">
+            Here we present the next 4 projects, which we hope will surely be on
+            your wish list
+          </p>
         </div>
         <div class="grid justify-items-center container mx-auto">
           <div class="carousel w-3/4 rounded-2xl my-5">
