--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
           <h1 class="lg:text-5xl text-4xl font-extrabold my-5">
             Our Next Projects!
           </h1>
-          <p class="text-gray-500">
+          <p class="text-gray-500 text-center">
             Here we present the next 4 projects, which we hope will surely be on
-            your wish list
+            your wish list.
           </p>
         </div>
         <div class="grid justify-items-center container mx-auto">
